Corrected version viewer overlaping the admin menu.

--- a/modules/version_viewer/css/viewer.css
+++ b/modules/version_viewer/css/viewer.css
@@ -4,7 +4,6 @@
     width: 100%;
     height: 100% !important;
     left: 0;
-    top: 0;
     bottom: 0;
     z-index: 10;
 }
